fix issue with overflowing images for healthsciences theme

--- a/plugins/themes/bootstrap3-child/styles/custom.less
+++ b/plugins/themes/bootstrap3-child/styles/custom.less
@@ -257,7 +257,7 @@ table.table-small {
 		padding: 25px 0;
 	}
 
-  .blog-summary img {
+  & .blog-summary img {
     max-width: 100%;
   }
 
