--- a/plugins/themes/healthSciences-child/styles/custom.less
+++ b/plugins/themes/healthSciences-child/styles/custom.less
@@ -138,6 +138,10 @@ blockquote {
 		padding: 25px 0;
 	}
 
+  & .blog-summary img {
+    max-width: 100%;
+  }
+
 	& .blog-summary h2 {
 		line-height: 1.2;
 		margin: 0;
